GNOME Bugzilla – Bug 709271
Fix memory leaks
Last modified: 2013-10-02 15:26:01 UTC
.
Created attachment 256281 [details] [review] gnome-bg: Fix memory leaks when using get_as_slideshow() get_as_slideshow() returns a reference to the slideshow, which we need to get rid of when we're not using it anymore.
Created attachment 256282 [details] [review] gnome-bg-slideshow: Fix memory leak of a filename
Review of attachment 256281 [details] [review]: Looks good to me.
Review of attachment 256282 [details] [review]: Looks right.
Attachment 256281 [details] pushed as af0f0fb - gnome-bg: Fix memory leaks when using get_as_slideshow() Attachment 256282 [details] pushed as dfc4eca - gnome-bg-slideshow: Fix memory leak of a filename