gnome-bg: Fix memory leaks when using get_as_slideshow()

get_as_slideshow() returns a reference to the slideshow,
which we need to get rid of when we're not using it anymore.

https://bugzilla.gnome.org/show_bug.cgi?id=709271